1.0.0
-----
 * Startup Validation Failures when Checking Sidecar Connectivity (CASSANDRASC-86)
 * Add support for additional digest validation during SSTable upload (CASSANDRASC-97)
 * Add sidecar client changes for restore from S3 (CASSANDRASC-95)
 * Add restore SSTables from S3 into Cassandra feature to Cassandra Sidecar (CASSANDRASC-92)
 * Define routing order for http routes (CASSANDRASC-93)
 * AbstractHandler is handling the request even when it fails to extract params (CASSANDRASC-91)
 * Fix Sidecar TokenRangeReplicas endpoint to unwrap the token-range by partitioner's range for a single node clusters (CASSANDRASC-90)
 * Expose TTL option for the create snapshot endpoint (CASSANDRASC-85)
 * Allow DriverUtils to be pluggable (CASSANDRASC-88)
 * Add JMX health checks during the periodic health checks (CASSANDRASC-87)
 * Sidecar should be able to load metadata even if the local instance is unavailable (CASSANDRASC-79)
 * Expose additional SSL configuration options for the Sidecar Service (CASSANDRASC-82)
 * Expose additional node settings (CASSANDRASC-84)
 * Sidecar does not handle keyspaces and table names with mixed case (CASSANDRASC-76)
 * Require gossip to be enabled for ring and token ranges mapping endpoints (CASSANDRASC-83)
 * Improve TokenRangeReplicasResponse payload (CASSANDRASC-81)
 * HealthCheckPeriodicTask execute never completes the promise when instances are empty (CASSANDRASC-80)
 * Fix token-ranges endpoint to handle gossip-info responses without 'status' (CASSANDRASC-78)
 * Upgrade vertx to version 4.4.6 to bring hot reloading and traffic shaping options (CASSANDRASC-77)
 * Fix unable to stream secondary index files (CASSANDRASC-74)
 * Updates token-ranges endpoint to return additional instance metadata (CASSANDRASC-73)
 * Shade Jackson completely to prevent incompatibility issues (CASSANDRASC-75)
 * Adds endpoint to serve read/write replica-sets by token-ranges (CASSANDRASC-60)