@@ -28,6 +28,7 @@ import org.slf4j.LoggerFactory;
 
 import com.google.inject.Inject;
 import com.google.inject.Singleton;
+import com.google.inject.name.Named;
 import io.vertx.core.Future;
 import io.vertx.core.Promise;
 import io.vertx.ext.web.handler.HttpException;
@@ -60,7 +61,7 @@ public class FileStreamer
     @Inject
     public FileStreamer(ExecutorPools executorPools,
                         ServiceConfiguration config,
-                        SidecarRateLimiter rateLimiter,
+                        @Named("StreamRequestRateLimiter") SidecarRateLimiter rateLimiter,
                         SidecarStats stats)
     {
         this.executorPools = executorPools;
